added idempotency feature for every balance updating method
